Alembic: object constraints animation no longer exported #71986

Closed
opened 2019-11-27 23:09:13 +01:00 by Steffen Dünner · 13 comments

System Information
Operating system: Linux-5.3.13-050313-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.33.01

Blender Version
Broken: version: 2.82 (sub 2), branch: master, commit date: 2019-11-27 20:26, hash: 4659fa5471
Worked: 0a3f0e64c9 from a few days ago, Blender 2.81, Blender 2.80 and Blender 2.79

Short description of error
Objects parented to curves using the "Follow Path" command are animated along the path and should be therefore exported to Alembic. This stopped working a few commits ago it seems. I suspect one of this one: https://developer.blender.org/rBf18ad385dffe70f5e57df00ff9bbb7b42fa05be0

Exact steps for others to reproduce the error

  • Add a cube
  • Add a path
  • First select the cube then the path
  • Press CTRL + P to parent the cube to the path and select "Follow Path"
  • Check in the timeline the cube is animated during the first 100 frames
  • Export to Alembic
  • Import the Alembic to Blender (I also tried Houdini) -> no animation

I also attached a very simple blend file containing above objects:

Follow_Path_v01.blend

**System Information** Operating system: Linux-5.3.13-050313-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.33.01 **Blender Version** Broken: version: 2.82 (sub 2), branch: master, commit date: 2019-11-27 20:26, hash: `4659fa5471` Worked: 0a3f0e64c9d2 from a few days ago, Blender 2.81, Blender 2.80 and Blender 2.79 **Short description of error** Objects parented to curves using the "Follow Path" command are animated along the path and should be therefore exported to Alembic. This stopped working a few commits ago it seems. I suspect one of this one: https://developer.blender.org/rBf18ad385dffe70f5e57df00ff9bbb7b42fa05be0 **Exact steps for others to reproduce the error** - Add a cube - Add a path - First select the cube then the path - Press CTRL + P to parent the cube to the path and select "Follow Path" - Check in the timeline the cube is animated during the first 100 frames - Export to Alembic - Import the Alembic to Blender (I also tried Houdini) -> no animation I also attached a very simple blend file containing above objects: [Follow_Path_v01.blend](https://archive.blender.org/developer/F8173185/Follow_Path_v01.blend)

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Added subscribers: @dr.sybren, @lichtwerk

Added subscribers: @dr.sybren, @lichtwerk
Member

This is true for all constraints.

@dr.sybren: I assume this is more of an oversight than a design decision?
Would personally think constraints should be baked [since their relationship is not going to be recreated on import], thus would consider this a high priority...

This is true for all constraints. @dr.sybren: I assume this is more of an oversight than a design decision? Would personally think constraints should be baked [since their relationship is not going to be recreated on import], thus would consider this a high priority...
Philipp Oeser changed title from "Follow Path" Animation no longer exported to Alembic to Alembic: object constraints animation no longer exported 2019-11-28 11:22:02 +01:00
Sybren A. Stüvel self-assigned this 2019-11-29 12:52:49 +01:00

This issue was referenced by e7c7707ca9

This issue was referenced by e7c7707ca9a876f123511b548a742ca9373e19b9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks @SteffenD for doing the digging and making it so easy to fix :)

Thanks @SteffenD for doing the digging and making it so easy to fix :)

:) You're welcome. Thanks for taking care of this.

I can confirm that constraints animations are now exported to Alembic. The bad news is that the "Follow Path" case still doesn't work (in build 4feced2f3e, so the fix should be included).
The blend file I attached to this report is not exporting the animation.

:) You're welcome. Thanks for taking care of this. I can confirm that constraints animations are now exported to Alembic. The bad news is that the "Follow Path" case still doesn't work (in build 4feced2f3e5a, so the fix should be included). The blend file I attached to this report is not exporting the animation.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

@lichtwerk The path following isn't a constraint, and I missed this 'nuance' while reading the rest of the task due to the changed title.

@lichtwerk The path following isn't a constraint, and I missed this 'nuance' while reading the rest of the task due to the changed title.
Member

@dr.sybren, @SteffenD : sorry about this, in a rare exception to the rule I did not open the report file in this case, but checked from scratch in my own file [brain was mistakenly throwing in the constraint instead of the parent relationship...]
[nice side-effect: we've now got the constraints case covered as well :)]

@dr.sybren, @SteffenD : sorry about this, in a rare exception to the rule I did not open the report file in this case, but checked from scratch in my own file [brain was mistakenly throwing in the constraint instead of the parent relationship...] [nice side-effect: we've now got the constraints case covered as well :)]

This issue was referenced by 9ea0eb0b95

This issue was referenced by 9ea0eb0b950f498b2bda91f137fce7c961eb08f5

Yeah, well, I rolled back the original change. It causes too much of a headache right now.

Yeah, well, I rolled back the original change. It causes too much of a headache right now.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71986
No description provided.