source/blender/alembic/intern/abc_transform.cc
@@ -27,6 +27,7 @@
 extern "C" {
 #include "DNA_object_types.h"
 
+#include "BLI_listbase.h"
 #include "BLI_math.h"
 
 #include "BKE_animsys.h"
@@ -133,7 +134,7 @@ Imath::Box3d AbcTransformWriter::bounds()
 
 bool AbcTransformWriter::hasAnimation(Object *ob) const
 {
-  return BKE_animdata_id_is_animated(&ob->id);
+  return !BLI_listbase_is_empty(&ob->constraints) || BKE_animdata_id_is_animated(&ob->id);
 }
 
 /* ************************************************************************** */
